[#255] adapted ch emed epr (and ch core) to inherit from ch core